Source/WebCore/page/Page.cpp
@@ -1781,9 +1781,6 @@ void Page::playbackControlsManagerUpdateTimerFired()
 
 void Page::setMuted(MediaProducer::MutedStateFlags muted)
 {
-    if (m_mutedState == muted)
-        return;
-
     m_mutedState = muted;
 
     forEachDocument([] (Document& document) {
