Source/WebCore/platform/mediastream/mac/BaseAudioSharedUnit.cpp
@@ -74,16 +74,14 @@ void BaseAudioSharedUnit::startProducingData()
 {
     ASSERT(isMainThread());
 
+    if (m_suspended)
+        resume();
+
     if (++m_producingCount != 1)
         return;
 
     if (isProducingData())
         return;
-
-    if (m_suspended) {
-        RELEASE_LOG_INFO(WebRTC, "BaseAudioSharedUnit::startProducingData - exiting early as suspended");
-        return;
-    }
 
     if (hasAudioUnit()) {
         cleanupAudioUnit();
@@ -159,7 +157,9 @@ void BaseAudioSharedUnit::reconfigure()
 OSStatus BaseAudioSharedUnit::resume()
 {
     ASSERT(isMainThread());
-    ASSERT(m_suspended);
+    if (!m_suspended)
+        return 0;
+
     ASSERT(!isProducingData());
 
     RELEASE_LOG_INFO(WebRTC, "BaseAudioSharedUnit::resume");
@@ -180,7 +180,7 @@ OSStatus BaseAudioSharedUnit::resume()
     }
 
     forEachClient([](auto& client) {
-        client.notifyMutedChange(false);
+        client.setMuted(false);
     });
 
     return 0;
@@ -196,7 +196,7 @@ OSStatus BaseAudioSharedUnit::suspend()
     stopInternal();
 
     forEachClient([](auto& client) {
-        client.notifyMutedChange(true);
+        client.setMuted(true);
     });
 
     return 0;
